Update logic: đổi định dạng thành ngày-tháng-năm giờ-phút & đổi sang múi giờ của Việt Nam UTC+7

--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -4,10 +4,10 @@ on:
   schedule:
     - cron: '0 17 * * *'   # 00:00 VN
     - cron: '0 21 * * *'   # 04:00 VN
-    - cron: '0 1 * * *'   # 08:00 VN
-    - cron: '0 5 * * *'   # 12:00 VN
-    - cron: '0 9 * * *'   # 16:00 VN
-    - cron: '0 13 * * *'  # 20:00 VN
+    - cron: '0 1 * * *'    # 08:00 VN
+    - cron: '0 5 * * *'    # 12:00 VN
+    - cron: '0 9 * * *'    # 16:00 VN
+    - cron: '0 13 * * *'   # 20:00 VN
   workflow_dispatch:
 
 permissions:
@@ -21,11 +21,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Auto Commit
+      - name: Auto Commit with Vietnam Time and Author
         run: |
+          export TZ=Asia/Ho_Chi_Minh
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          echo "🕒 $(date)" >> last-commit.txt
+
+          TIME=$(date +"%d-%m-%Y %H:%M")
+          echo "🕒 $TIME by Tống Trần Kiên" >> last-commit.txt
+
           git add .
-          git commit -m "✅ Auto commit at $(date)" || echo "Nothing to commit"
+          git commit -m "✅ Auto commit at $TIME by Tống Trần Kiên" || echo "Nothing to commit"
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
